# simple-weather-script

./: .env.example  .gitignore  LICENSE  README.md  config.py  coordinates.py  exceptions.py  history.py  main.py  pyproject.toml  weather_api_service.py  weather_formatter.py
